--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <p>
   <h3> More about me:</h3>
   <h4> <a href="https://codermerlin.com/users/mustafa-shihab/Digital%20Portfolio/ISP.html"> My ISP Project </a> </h4>
-      <h4><a href="https://codermerlin.com/users/mustafa-shihab/Digital%20Portfolio/CS.html " > Computer Science 1</a> </h4>
-   </body>
+  <h4><a href="https://codermerlin.com/users/mustafa-shihab/Digital%20Portfolio/CS.html " > Computer Science 1</a> </h4>
+  <h4><a href="https://codermerlin.com/users/mustafa-shihab/Digital%20Portfolio/CS-II/Essays/Fingerprints.html"> Fingerprint</a></h4>
+  <h4><a href="https://www.codermerlin.com/users/mustafa-shihab/Digital%20Portfolio/CS-II/Essays/AI%20Sentience.html"> AI Sentience</a></h4>   </body>
  <center><body> I think a DP is very useful to me because it helps me develop my strengths in html  and helps me find a career the i'm passionate about.It also help me present the things i have learned in ways that are easily digestible to others. On top of all the while i'm making my DP I learn a lot of new skills on the way. </body></center>
 </html>
